--- a/app/src/main/res/layout/camera_overlay.xml
+++ b/app/src/main/res/layout/camera_overlay.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/camera_overlay_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
         <ProgressBar
             style="@android:style/Widget.ProgressBar"
@@ -12,14 +13,75 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imagetargettext"
-            android:visibility="gone"
-            android:textSize="24dp"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"/>
+      <RelativeLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:id="@+id/info_layout"
+          android:visibility="gone">
+
+          <android.support.v4.view.ViewPager
+              android:id="@+id/pager"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+
+          </android.support.v4.view.ViewPager>
+          <android.support.design.widget.TabLayout
+              android:id="@+id/tabDots"
+              android:layout_alignParentBottom="true"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              app:tabBackground="@drawable/tab_selector"
+              app:tabGravity="center"
+              app:tabIndicatorHeight="0dp">
+
+              <android.support.design.widget.TabItem
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="info">
+
+              </android.support.design.widget.TabItem>
+
+              <android.support.design.widget.TabItem
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="specs" />
+
+              <android.support.design.widget.TabItem
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="Task" />
+          </android.support.design.widget.TabLayout>
+
+      </RelativeLayout>
+
+    <!--  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_margin="50dp"
+      android:padding="20dp"
+      android:id="@+id/info_layout"
+      android:visibility="gone"
+      android:orientation="vertical"
+      android:background="@color/black"
+      android:layout_centerVertical="true">
+
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:id="@+id/target_info"
+      android:textSize="24dp"
+      android:textAlignment="center"
+      android:textColor="@android:color/white"
+      android:textStyle="bold" />
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="16dp"
+       android:textSize="12dp"
+       android:id="@+id/info_details"
+       android:textColor="@android:color/white"
+       android:textStyle="italic"
+       android:gravity="start" />
+  </LinearLayout>
+ -->
 </RelativeLayout>
