--- a/app/src/main/res/layout/camera_overlay.xml
+++ b/app/src/main/res/layout/camera_overlay.xml
@@ -15,43 +15,28 @@
 
       <RelativeLayout
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"
+          android:layout_height="400dp"
           android:id="@+id/info_layout"
+          android:padding="10dp"
+          android:layout_centerInParent="true"
+          android:theme="@style/layouttheme"
           android:visibility="gone">
+
+          <android.support.design.widget.TabLayout
+              android:id="@+id/tab_layout"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:elevation="0dp"
+              android:background="#80000000"
+              app:tabTextColor="@android:color/white"
+              android:minHeight="?attr/actionBarSize" />
 
           <android.support.v4.view.ViewPager
               android:id="@+id/pager"
+              android:layout_below="@+id/tab_layout"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-
           </android.support.v4.view.ViewPager>
-          <android.support.design.widget.TabLayout
-              android:id="@+id/tabDots"
-              android:layout_alignParentBottom="true"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              app:tabBackground="@drawable/tab_selector"
-              app:tabGravity="center"
-              app:tabIndicatorHeight="0dp">
-
-              <android.support.design.widget.TabItem
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="info">
-
-              </android.support.design.widget.TabItem>
-
-              <android.support.design.widget.TabItem
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="specs" />
-
-              <android.support.design.widget.TabItem
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="Task" />
-          </android.support.design.widget.TabLayout>
-
       </RelativeLayout>
 
     <!--  <LinearLayout
