--- a/app/src/main/res/values-v13/styles.xml
+++ b/app/src/main/res/values-v13/styles.xml
@@ -5,5 +5,9 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@color/black</item>
     </style>
-    
+
+    <style name="layouttheme" parent="SampleAppsTheme">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:background">#99000000</item>
+    </style>
 </resources>
