--- a/app/src/main/res/layout/camera_overlay.xml
+++ b/app/src/main/res/layout/camera_overlay.xml
@@ -18,55 +18,29 @@
           android:layout_height="400dp"
           android:id="@+id/info_layout"
           android:padding="10dp"
+          android:background="#74000000"
           android:layout_centerInParent="true"
-          android:theme="@style/layouttheme"
           android:visibility="gone">
 
-          <android.support.design.widget.TabLayout
-              android:id="@+id/tab_layout"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:elevation="0dp"
-              android:background="#80000000"
-              app:tabTextColor="@android:color/white"
-              android:minHeight="?attr/actionBarSize" />
 
           <android.support.v4.view.ViewPager
               android:id="@+id/pager"
-              android:layout_below="@+id/tab_layout"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
           </android.support.v4.view.ViewPager>
+
+          <android.support.design.widget.TabLayout
+              android:id="@+id/tab_layout"
+              android:layout_alignParentBottom="true"
+              android:layout_centerHorizontal="true"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              app:tabBackground="@drawable/tab_selector"
+              app:tabGravity="center"
+              app:tabIndicatorHeight="0dp"
+              app:tabTextColor="@android:color/white"
+              android:minHeight="?attr/actionBarSize" />
       </RelativeLayout>
 
-    <!--  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="50dp"
-      android:padding="20dp"
-      android:id="@+id/info_layout"
-      android:visibility="gone"
-      android:orientation="vertical"
-      android:background="@color/black"
-      android:layout_centerVertical="true">
 
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:id="@+id/target_info"
-      android:textSize="24dp"
-      android:textAlignment="center"
-      android:textColor="@android:color/white"
-      android:textStyle="bold" />
-   <TextView
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_marginTop="16dp"
-       android:textSize="12dp"
-       android:id="@+id/info_details"
-       android:textColor="@android:color/white"
-       android:textStyle="italic"
-       android:gravity="start" />
-  </LinearLayout>
- -->
 </RelativeLayout>
