--- a/app/src/main/res/layout/camera_overlay.xml
+++ b/app/src/main/res/layout/camera_overlay.xml
@@ -17,14 +17,34 @@
           android:layout_width="match_parent"
           android:layout_height="400dp"
           android:id="@+id/info_layout"
-          android:padding="10dp"
+          android:layout_margin="24dp"
           android:background="#74000000"
           android:layout_centerInParent="true"
           android:visibility="gone">
 
 
+          <TextView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_alignParentTop="true"
+              android:layout_alignParentRight="true"
+              android:id="@+id/trackable_distance"
+              android:textColor="@android:color/white"
+              android:textSize="12dp"
+              android:textStyle="bold"/>
+          <TextView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_alignParentTop="true"
+              android:layout_centerHorizontal="true"
+              android:id="@+id/workstation_name"
+              android:textColor="@android:color/white"
+              android:textSize="24dp"
+              android:textStyle="bold"/>
+
           <android.support.v4.view.ViewPager
               android:id="@+id/pager"
+              android:layout_below="@+id/workstation_name"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
           </android.support.v4.view.ViewPager>
@@ -35,11 +55,11 @@
               android:layout_centerHorizontal="true"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              style ="@style/MyCustomTabLayout"
               app:tabBackground="@drawable/tab_selector"
               app:tabGravity="center"
               app:tabIndicatorHeight="0dp"
-              app:tabTextColor="@android:color/white"
-              android:minHeight="?attr/actionBarSize" />
+              app:tabTextColor="@android:color/white" />
       </RelativeLayout>
 
 
