--- a/app/src/main/res/layout/tab_fragment_1.xml
+++ b/app/src/main/res/layout/tab_fragment_1.xml
@@ -6,13 +6,7 @@
         android:theme="@style/layouttheme"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/wname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|top"
-            android:padding="8dp"
-            />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,6 +25,24 @@
                 android:layout_height="wrap_content"
                 android:padding="8dp"/>
         </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="@string/workcell_name" />
+
+        <TextView
+            android:id="@+id/workcell"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"/>
+    </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
