--- a/app/src/main/res/layout/tab_fragment_3.xml
+++ b/app/src/main/res/layout/tab_fragment_3.xml
@@ -6,12 +6,40 @@
     android:theme="@style/layouttheme"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/opname"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:padding="8dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="@string/operator_details" />
+
+        <TextView
+            android:id="@+id/opname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="@string/remarks" />
+
+        <TextView
+            android:id="@+id/opremarks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"/>
+    </LinearLayout>
+
 
 </LinearLayout>
